--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <h2 class="title">About me</h2>
             <div class="about-content">
                 <div class="column left">
-                    <img src="./images/Deepali_Jaiswar.jpg" alt="Deepali">
+                    <img src="./images/Deepali_Jaiswar.jpeg" alt="Deepali">
                 </div>
                 <div class="column right">
                     <div class="text">I'm Deepali Jaiswar and I'm a <span class="typing-2"></span></div>
