--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
             </div>
             <div>
-                <img src="" class="Background.jpg" alt="">
+                <img src="Background.jpg" class="Background.jpg" alt="">
             </div>
         </div>
     </section>
