--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div class="nav-link home">
         <nav id="nav-menu">
             <div class="max-width">
-                <div class="logo"> <a href="#">Deepali Jaiswar</a></div>
+                <div class="logo"> <a href="#">#Deepali Jaiswar/></a></div>
                 <ul class="menu">
                     <li><a href="#" class="menu-btn" class="nav-link home">Home</a></li>
                     <li><a class="nav-link about" href="#about" class="menu-btn">About</a></li>
@@ -66,6 +66,7 @@
             <div>
                 <img src="Background.jpg" class="Background.jpg" alt="">
             </div>
+            </div>
     </section>
 
 
@@ -81,7 +82,7 @@
                 </div>
                 <div class="column right">
                     <div class="text">I'm Deepali Jaiswar and I'm a <span class="typing-2"></span></div>
-                    <p id="user-detail-intro">Currently pursuing BSc in Computer Science, A Third-year student & I Love to do Coding.
+                    <p id="user-detail-intro">A Fresher Graduate in  BSc Computer Science, I Love to do Coding.
                         A self-motivated, hard-working, Coding Enthusiast, and Programmer.,<br>
                         A motivated individual with knowledge of languages and development tools, seeking a position in a growth-
                         oriented company where I can use my skills to the advantage of the company while having the scope to develop
